# django_pyoidc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  ci_run_e2e_tests.sh  manage.py  mypy_settings.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  run_e2e_tests.py  run_mypy.sh  run_tests.py  runtests.py  setup.py
.github/: FUNDING.yml
.github/workflows/: integration-tests.yml  lint.yml  python-publish.yml  test-django-main.yml
django_pyoidc/: __init__.py  admin.py  apps.py  client.py  engine.py  exceptions.py  helper.py  models.py  session.py  settings.py  test_paul.py  test_views.py  utils.py  views.py
django_pyoidc/drf/: authentication.py  schema.py
django_pyoidc/migrations/: 0001_initial.py
django_pyoidc/providers/: __init__.py  base.py  keycloak_10.py  keycloak_17.py  keycloak_18.py  lemonldapng.py  lemonldapng2.py  provider.py
django_pyoidc/tests/: callbacks.py
docs/: conf.py  contributer.rst  contributing.rst  explanation.rst  how-to.rst  index.rst  reference.rst  settings.rst  tutorial.rst  user.rst
makina_django_oidc/: __init__.py  admin.py  models.py  session.py  utils.py  views.py
makina_django_oidc/migrations/: 0001_initial.py
makina_django_oidc/providers/: __init__.py  base.py  keycloak.py  keycloak_10.py  keycloak_17.py  keycloak_18.py  keycloak_20.py
makina_django_oidc/tests/: callbacks.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
requirements/3.10/: requirements-dev.txt
requirements/3.12/: requirements-dev.txt  requirements-test.txt  requirements.txt
requirements/3.14/: requirements-dev.txt  requirements-test.txt  requirements.txt
requirements/3.8/: requirements-dev.txt  requirements-test.txt  requirements.txt
tests/: settings.py  test_settings.py  tests_cache.py  tests_engine.py  tests_jwt.py  tests_library_settings.py  tests_paul.py  tests_pyoidc.py  tests_schema.py  tests_session.py  tests_urls.py  tests_views.py  urls.py  utils.py
tests/e2e/: README.md  keycloak.sh  record_e2e_tests.sh  settings.py  tests_keycloak.py  tests_lemonldapng.py  urls.py  utils.py
tests/e2e/docker/: Dockerfile-keycloak  Dockerfile-lemonldap  docker-entrypoint-lemonldap.sh  keycloak.sh
tests/e2e/front_test_app/: Dockerfile  README.md  app.js  index.php  styles.css
tests/e2e/test_app/: apps.py  callback.py  models.py  views.py
tests/e2e/test_app/templates/: tests.html
tests_e2e/: settings.py  tests_keycloak.py  tests_lemonldapng.py  urls.py  utils.py
tests_e2e/docker/: Dockerfile
tests_e2e/test_app/: callback.py  views.py
