license = {file = "LICENSE"}
readme = "README.md" # Optional

[project]
name="django-pyoidc"
authors=[
    {name="Régis Leroy (Makina Corpus)", email="django_pyoidc@makina-corpus.net"},
    {name="Paul Florence (Makina Corpus)", email="django_pyoidc@makina-corpus.net"}
]
classifiers=["Topic :: Utilities",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Security"
]
description="Authenticate your users using OpenID Connect (OIDC)"
requires-python=">=3.8"
dynamic = ["version", "dependencies"]
keywords=["openid","oidc","django","sso","single-sign-on", "openid-connect", "authentication"]
readme="README.md"

[project.urls]
repository="https://github.com/makinacorpus/django_pyoidc"

[project.optional-dependencies]
drf = ['djangorestframework', 'drf-spectacular']

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.in"] }


[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]


warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

strict_equality = true
strict_concatenate = true

check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_reexport = true

no_implicit_optional = true
show_error_codes = true

[tool.django-stubs]
django_settings_module = "mypy_settings"
strict_settings = false
