[project]
dynamic = ["version"]
name="django-pyoidc"
authors=[
    {name="Régis Leroy (Makina Corpus)", email="django_pyoidc@makina-corpus.net"},
    {name="Paul Florence (Makina Corpus)", email="django_pyoidc@makina-corpus.net"}
]
classifiers=["Topic :: Utilities",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 3.2",
        "Framework :: Django :: 4",
        "Framework :: Django :: 4.0",
        "Framework :: Django :: 4.1",
        "Framework :: Django :: 4.2",
        "Framework :: Django :: 5",
        "Framework :: Django :: 5.0",
        "Framework :: Django :: 5.1",
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Security"
]
description="Authenticate your users using OpenID Connect (OIDC)"
requires-python=">=3.8"
keywords=["openid","oidc","django","sso","single-sign-on", "openid-connect", "authentication"]
readme="README.md"
license="GPL-3.0-only"
dependencies = [
        "oic==1.7.0",
        "django>=3.2",
        "jsonpickle",
        "jwt",
        "pycryptodomex",
]
license-files = ['LICENSE']

[project.urls]
repository="https://github.com/makinacorpus/django_pyoidc"

[project.optional-dependencies]
drf = ['djangorestframework', 'drf-spectacular']

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]


warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

strict_equality = true

check_untyped_defs = true

disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_reexport = true
no_implicit_optional = true

show_error_codes = true
extra_checks = true

[tool.django-stubs]
django_settings_module = "mypy_settings"
strict_settings = false

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
method = "git"
