[project]
dynamic = ["version"]
name="django-pyoidc"
authors=[
    {name="Régis Leroy (Makina Corpus)", email="django_pyoidc@makina-corpus.net"},
    {name="Paul Florence (Makina Corpus)", email="django_pyoidc@makina-corpus.net"}
]
classifiers=["Topic :: Utilities",
        "Natural Language :: English",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Environment :: Web Environment",
        "Framework :: Django",
        "Framework :: Django :: 5.2",
        "Framework :: Django :: 6.0",
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Security"
]
description="Authenticate your users using OpenID Connect (OIDC)"
requires-python=">=3.10"
keywords=["openid","oidc","django","sso","single-sign-on", "openid-connect", "authentication"]
readme="README.md"
license="GPL-3.0-only"
dependencies = [
        "oic==1.7.0",
        "django>=5.2",
        "jsonpickle",
        "pyjwt",
        "pycryptodomex",
]
license-files = ['LICENSE']

[project.urls]
repository="https://github.com/makinacorpus/django_pyoidc"

[project.optional-dependencies]
drf = ['djangorestframework', 'drf-spectacular']

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]


warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

strict_equality = true

check_untyped_defs = true

disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

no_implicit_reexport = true
no_implicit_optional = true

show_error_codes = true
extra_checks = true

[tool.django-stubs]
django_settings_module = "mypy_settings"
strict_settings = false

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.vcs]
method = "git"

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
indent-width = 4
extend-exclude = ['docs/', 'tests/e2e', 'tests/settings.py']
target-version = "py312"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/configuration/
# The following are recommanded additional set of rules to add to ruff.
select = [
        # flake8-use-pathlib
        "PTH",
        # tryceratops
        "TRY",
        # perflint
        "PERF",
        # Ruf linting
        "RUF",
    # isort
    "I",
        # flake8-2020
        "YTT",
        # flake8-bandit
        "S",
        # flake8-builtins
        "A",
        # flake8-tidy-imports
        "TID",
        # flynt
        "FLY",
        # pep8-naming
        "N",
        # flake8-logging
        "LOG",
        # flake8-errmsg
        "EM",
        # flake8-logging-format
        "G"
]
ignore = ["RUF012", "TRY003", "E501"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
